--- a/scRNA-seq/heatmap.Rmd
+++ b/scRNA-seq/heatmap.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 **#this is the code for the analysis of single cell sequencing in the manuscript entitled "A genomic portrait of zebrafish transposable elements and their spatiotemporal embryonic expression"**<br>
 ##Code for the heatmap<br>
-##grep 42 TE markers identified from Seurat (blastula/gastrula/segmentation** batchcorrected_AE.txt)
+##grep 34 TE markers identified from Seurat (blastula/gastrula/segmentation** batchcorrected_AE.txt)
 
 ```{r, eval=FALSE}
 library(dplyr)
@@ -18,7 +18,7 @@ library(ComplexHeatmap)
 library(circlize)
 library(colorspace)
 library(GetoptLong)
-df <- read.delim("stages_42_TE_AE.txt", sep = "\t", stringsAsFactors=F, header = TRUE, row.names=1)
+df <- read.delim("34_DETEs_3stages_AE.txt", sep = "\t", stringsAsFactors=F, header = TRUE, row.names=1)
 df.numeric.2 <- df+1
 
 #z-score
@@ -26,9 +26,9 @@ x<-apply(df.numeric.2,1,mean)
 sd<-apply(df.numeric.2,1,sd)
 df.zscore<-(df.numeric.2-x)/sd
 
-df.zscore1 = df.zscore[, 1:12]
-df.zscore2 = df.zscore[, 13:54]
-df.zscore3 = df.zscore[, 55:89]
+df.zscore1 = df.zscore[, 1:13]
+df.zscore2 = df.zscore[, 14:52]
+df.zscore3 = df.zscore[, 53:88]
 
 # K-means clustering
 km = kmeans(df.zscore, centers = 2)$cluster
@@ -46,7 +46,7 @@ Heatmap(df.zscore1,
         row_names_side ="left",
         split=hsplit,
         row_order = hclust_ward$order,
-        row_names_gp = gpar(fontsize = 10),
+        row_names_gp = gpar(fontsize = 15),
         cluster_columns = FALSE,
         show_column_dend = FALSE,
         col = colorRamp2(c(-1, 0, 1), c("skyblue3", "white", "lightgoldenrod1"))) +
